# PPOkemon

./: .gitignore  CMakeLists.txt  build.sh  test_networks.cpp
cmake/: CompilerSettings.cmake  Dependencies.cmake  LibTorch.cmake  LinkLibraries.cmake  PokeRED.cmake  SourceFiles.cmake
docs/: CMAKE_STRUCTURE.md  ENVIRONMENT_IMPLEMENTATION.md  TEST_FRAMEWORK_COMPLETION_SUMMARY.md
examples/: environment_example.cpp  pokered_example.cpp
guides/: CMake_Build_Tools.md  File_Restructure.md  Unit_Tests.md
include/emulation/: emu_gbc.h  inputhandler.h  renderer.h
include/environments/pokered/: pokered.h  pokered_rewards.h
include/libgambatte/: gambatte.h  inputgetter.h
include/libgambatte/mem/: huc3_chip.h  infrared.h  mem_time.h  rtc.h  sgb.h
include/libgambatte/mem/mbc/: mbc.h
include/torch/algorithms/: ppo.h  rollout_buffer.h
include/torch/envs/: env_abstract.h  env_base.h  env_vectorized.h
include/torch/networks/: a2c.h  a3c.h  cnn.h  mlp.h  network_base.h
include/torch/training/: trainer.h
include/torch/training/callbacks/: checkpoint_callback.h  logging_callback.h
include/torch/training/evaluation/: evaluator.h  metrics.h
include/torch/utils/: advantage_estimator.h  checkpoint_manager.h  ema.h  logger.h  lr_scheduler.h  noise.h  profiler.h  replay_buffer.h  running_mean_std.h  seed_manager.h  tensor_utils.h  weight_initializer.h
src/: test.cpp
src/emulation/: emu_gbc.cpp  inputhandler.cpp  renderer.cpp
src/environments/pokered/: pokered.cpp  pokered_rewards.cpp
src/libgambatte/: initstate.cpp  memory.cpp
src/libgambatte/common/: usec.cpp
src/libgambatte/file/: file.cpp
src/libgambatte/mem/: mem_time.cpp
src/torch/algorithms/: ppo.cpp  rollout_buffer.cpp
src/torch/envs/: env_abstract.cpp  env_base.cpp  env_vectorized.cpp
src/torch/networks/: a2c.cpp  a3c.cpp  cnn.cpp  mlp.cpp
src/torch/training/: # Code Citations.md  trainer.cpp
src/torch/training/callbacks/: checkpoint_callback.cpp  logging_callback.cpp
src/torch/training/evaluation/: evaluator.cpp  metrics.cpp
src/torch/utils/: advantage_estimator.cpp  checkpoint_manager.cpp  ema.cpp  logger.cpp  lr_scheduler.cpp  noise.cpp  profiler.cpp  replay_buffer.cpp  running_mean_std.cpp  seed_manager.cpp  tensor_utils.cpp  weight_initializer.cpp
tests/: CMakeLists.txt  test_advanced_utils.cpp  test_algorithms_ppo_comprehensive.cpp  test_algorithms_ppo_simple.cpp  test_environments.cpp  test_environments_base.cpp  test_environments_running_stats.cpp  test_environments_vectorized.cpp  test_networks.cpp  test_networks_a2c.cpp  test_networks_a3c.cpp  test_networks_cnn.cpp  test_networks_integration.cpp  test_networks_mlp.cpp  test_pokered_rewards.cpp  test_training.cpp  test_training_callbacks.cpp  test_training_evaluator.cpp  test_training_metrics.cpp  test_training_trainer.cpp  test_utils.cpp  test_utils.h  test_utils_ml.cpp  test_utils_profiler.cpp  test_utils_replay.cpp  test_utils_scheduler.cpp  test_utils_seed.cpp
